# rust-curd

./: .env  Cargo.toml  config.toml
src/: db_model.rs  main.rs  schema.rs
src/config/: config.rs
