[package]
name = "venonika_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres"] }
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
